Issue 51557: Apply specific container filter to "SampleCount"